--- a/Publicaciones.html
+++ b/Publicaciones.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="Asset/style.css">
+    <link rel="stylesheet" href="https://redsocial-vallegrande.netlify.app/Asset/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -58,7 +58,7 @@
     <!-- ------------------------------------------------- -->
 
 
-    <script src="Asset/script.js"></script>
+    <script src="https://redsocial-vallegrande.netlify.app/Asset/script.js"></script>
 
 
 </html>
