--- a/Publicar/Public.html
+++ b/Publicar/Public.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css?v893">
+    <link rel="stylesheet" href="Asset/style.css">
 </head>
 
 <body>
