--- a/Publicar/Public.html
+++ b/Publicar/Public.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="Asset/style.css">
+    <title>Publicar</title>
 </head>
 
 <body>
