--- a/Publicaciones.html
+++ b/Publicaciones.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="Asset/publicacion/style.css?v92">
+    <link rel="stylesheet" href="https://redsocial-vallegrande.netlify.app/Asset/publicacion/style.css?v92">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -20,7 +20,7 @@
     </script>
     <!-- ------------------------------------------------- -->
 
-    <script src="Asset/publicacion/script.js?v84"></script>
+    <script src="https://redsocial-vallegrande.netlify.app/Asset/publicacion/script.js?v84"></script>
 
 
 </html>
