--- a/Publicaciones.html
+++ b/Publicaciones.html
@@ -20,7 +20,7 @@
     </script>
     <!-- ------------------------------------------------- -->
 
-    <script src="https://redsocial-vallegrande.netlify.app/Asset/publicacion/script.js?v84"></script>
+    <script src="Asset/publicacion/script.js?v84354"></script>
 
 
 </html>
