--- a/Publicar/inicio.html
+++ b/Publicar/inicio.html
@@ -118,7 +118,7 @@
         }
     </script>
 
-    <script src="Asset/script.js"></script>
+    <script src="Asset/script.js?v9629"></script>
 
     <!-- Agrega el enlace al JavaScript de Bootstrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
