--- a/in.html
+++ b/in.html
@@ -61,7 +61,7 @@
             <tbody></tbody>
         </table>
     </div>
-    <script src="https://redsocial-vallegrande.netlify.app/MichaellIbarra/js.js"></script>
+    <script src="MichaellIbarra_new/token.js?v828"></script>
     <script>
 
 
